more spacing fixes

--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -243,15 +243,16 @@ img{
   align-items: center;
 }
 .projImage img{
-  margin-top: 4em;
+  margin-top: 2em;
   margin-bottom: 4em;
+}
+.summary .projText{
+  margin-top:2em;
 }
 .projText ul li{
   margin-bottom: 10px;
 }
 .section{
-  margin-bottom: 40px;
-  margin-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
 }
